src/bindings_linux_armv8.rs

unsafe extern "C" {
    #[doc = " @noop FT_GetDriverVersion\n @par Supported Operating Systems\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function returns the D2XX driver version number.\n @param ftHandle Handle of the device.\n @param lpdwDriverVersion Pointer to the driver version number.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n A version number consists of major, minor and build version numbers contained in a 4-byte field\n (unsigned long). Byte0 (least significant) holds the build version, Byte1 holds the minor version, and\n Byte2 holds the major version. Byte3 is currently set to zero.\n @n For example, driver version \"2.04.06\" is represented as 0x00020406. Note that a device has to be\n opened before this function can be called."]
    pub fn FT_GetDriverVersion(ftHandle: FT_HANDLE, lpdwDriverVersion: LPDWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetLibraryVersion\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @n\n This function returns D2XX DLL or library version number.\n @param lpdwDLLVersion Pointer to the DLL or library version number.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n A version number consists of major, minor and build version numbers contained in a 4-byte field\n (unsigned long). Byte0 (least significant) holds the build version, Byte1 holds the minor version, and\n Byte2 holds the major version. Byte3 is currently set to zero.\n @n For example, D2XX DLL version \"3.01.15\" is represented as 0x00030115. Note that this function does\n not take a handle, and so it can be called without opening a device."]
    pub fn FT_GetLibraryVersion(lpdwDLLVersion: LPDWORD) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetComPortNumber\n @par Supported Operating Systems\n Windows (2000 and later)\n @par Summary\n Retrieves the COM port associated with a device.\n @param ftHandle Handle of the device.\n @param lplComPortNumber Pointer to a variable of type LONG which receives the COM port number\n associated with the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is only available when using the Windows CDM driver as both the D2XX and VCP drivers can\n be installed at the same time.\n @n If no COM port is associated with the device, lplComPortNumber will have a value of -1"]
    pub fn FT_GetComPortNumber(ftHandle: FT_HANDLE, lplComPortNumber: LPLONG) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_GetStatus\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Gets the device status including number of characters in the receive queue, number of characters in the\n transmit queue, and the current event status.\n @param ftHandle Handle of the device.\n @param lpdwAmountInRxQueue Pointer to a variable of type DWORD which receives the number of characters in\n the receive queue.\n @param lpdwAmountInTxQueue Pointer to a variable of type DWORD which receives the number of characters in\n the transmit queue.\n @param lpdwEventStatus Pointer to a variable of type DWORD which receives the current state of\n the event status.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n For an example of how to use this function, see the sample code in FT_SetEventNotification."]
    pub fn FT_GetStatus(
        ftHandle: FT_HANDLE,
        lpdwAmountInRxQueue: *mut DWORD,
        lpdwAmountInTxQueue: *mut DWORD,
        lpdwEventStatus: *mut DWORD,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetEventNotification\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Sets conditions for event notification.\n @param ftHandle Handle of the device.\n @param dwEventMask Conditions that cause the event to be set.\n @param pvArg Interpreted as the handle of an event.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n An application can use this function to setup conditions which allow a thread to block until one of the\n conditions is met. Typically, an application will create an event, call this function, then block on the\n event. When the conditions are met, the event is set, and the application thread unblocked.\n dwEventMask is a bit-map that describes the events the application is interested in. pvArg is interpreted\n as the handle of an event which has been created by the application. If one of the event conditions is\n met, the event is set.\n @n If FT_EVENT_RXCHAR is set in dwEventMask, the event will be set when a character has been received\n by the device.\n @n If FT_EVENT_MODEM_STATUS is set in dwEventMask, the event will be set when a change in the modem\n signals has been detected by the device.\n @n If FT_EVENT_LINE_STATUS is set in dwEventMask, the event will be set when a change in the line status\n has been detected by the device."]
    pub fn FT_SetEventNotification(
        ftHandle: FT_HANDLE,
        dwEventMask: DWORD,
        pvArg: PVOID,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetChars\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sets the special characters for the device.\n @param ftHandle Handle of the device.\n @param uEventChar Event character.\n @param uEventCharEnabled 0 if event character disabled, non-zero otherwise.\n @param uErrorChar Error character.\n @param uErrorCharEnabled 0 if error character disabled, non-zero otherwise.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function allows for inserting specified characters in the data stream to represent events firing or\n errors occurring."]
    pub fn FT_SetChars(
        ftHandle: FT_HANDLE,
        uEventChar: UCHAR,
        uEventCharEnabled: UCHAR,
        uErrorChar: UCHAR,
        uErrorCharEnabled: UCHAR,
    ) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetBreakOn\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Sets the BREAK condition for the device.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code"]
    pub fn FT_SetBreakOn(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_SetBreakOff\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n Resets the BREAK condition for the device.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_SetBreakOff(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_Purge\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function purges receive and transmit buffers in the device.\n @param ftHandle Handle of the device.\n @param ulMask Combination of FT_PURGE_RX and FT_PURGE_TX.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_Purge(ftHandle: FT_HANDLE, ulMask: ULONG) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_ResetDevice\n @par Supported Operating Systems\n Linux\n Mac OS X (10.4 and later)\n Windows (2000 and later)\n Windows CE (4.2 and later)\n @par Summary\n This function sends a reset command to the device.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code."]
    pub fn FT_ResetDevice(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_ResetPort\n @par Supported Operating Systems\n Windows (2000 and later)\n @par Summary\n Send a reset command to the port.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n This function is used to attempt to recover the port after a failure. It is not equivalent\n to an unplug-replug event. For the equivalent of an unplug-replug event, use FT_CyclePort.\n @see FT_CyclePort"]
    pub fn FT_ResetPort(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_CyclePort\n @par Supported Operating Systems\n Windows (2000 and later)\n @par Summary\n Send a cycle command to the USB port.\n @param ftHandle Handle of the device.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n The effect of this function is the same as disconnecting then reconnecting the device from\n USB. Possible use of this function is situations where a fatal error has occurred and it is\n difficult, or not possible, to recover without unplugging and replugging the USB cable.\n This function can also be used after reprogramming the EEPROM to force the FTDI device to\n read the new EEPROM contents which would\totherwise require a physical disconnect-reconnect.\n @n As the current session is not restored when the driver is reloaded, the application must\n be able to recover after calling this function. It is ithe responisbility of the application\n to close the handle after successfully calling FT_CyclePort.\n @n For FT4232H, FT2232H and FT2232 devices, FT_CyclePort will only work under Windows XP and later."]
    pub fn FT_CyclePort(ftHandle: FT_HANDLE) -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_Rescan\n @par Supported Operating Systems\n Windows (2000 and later)\n @par Summary\n This function can be of use when trying to recover devices programatically.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n Calling FT_Rescan is equivalent to clicking the \"Scan for hardware changes\" button in the Device\n Manager. Only USB hardware is checked for new devices. All USB devices are scanned, not just FTDI\n devices."]
    pub fn FT_Rescan() -> FT_STATUS;
}
unsafe extern "C" {
    #[doc = " @noop FT_Reload\n @par Supported Operating Systems\n Windows (2000 and later)\n @par Summary\n This function forces a reload of the driver for devices with a specific VID and PID combination.\n @param wVID Vendor ID of the devices to reload the driver for.\n @param wPID Product ID of the devices to reload the driver for.\n @returns\n FT_OK if successful, otherwise the return value is an FT error code.\n @remarks\n Calling FT_Reload forces the operating system to unload and reload the driver for the specified device\n IDs. If the VID and PID parameters are null, the drivers for USB root hubs will be reloaded, causing all\n USB devices connected to reload their drivers. Please note that this function will not work correctly on\n 64-bit Windows when called from a 32-bit application."]
    pub fn FT_Reload(wVID: WORD, wPID: WORD) -> FT_STATUS;
}
